2007-10-30  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/settings.cpp:
	* src/settings.h:
		Automatically add missing start/stop markers at BOF/EOF, 
		configurable via "start_bof"/"stop_eof" in settings file.

	* src/main.cpp:
		Improved checking of cut list.

2007-10-29  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
	* src/dvbcutbase.ui:
		Allow timestamps in input fields, added -exp option. 
		-exp/-cut/-idx options overrule project file defaults.
		Add specific "Delete"-entries to marker context menu. 
		Fixed bugs with quick_picture_lookuptable.

	* src/pts.cpp:
	* src/pts.h:
		Function to convert formatted timestamps to pts_t

2007-10-25  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Search for libintl and <libintl.h>.

	* src/Makefile.w32:
	* src/SConscript:
		Add gettext.{cpp,h}.
 
	* src/dvbcutbase.ui:
	* src/exportdialogbase.ui:
	* src/mplayererrorbase.ui:
	* src/progresswindowbase.ui:
		Make uic include "gettext.h".

	* src/gettext.cpp:
	* src/gettext.h:
		New files providing hooks for gettext().

	* src/main.cpp:
		Add i18n framework.

2007-10-25  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
		Add missing newlines.

	* src/dvbcut.cpp:
		Display '*' marker for exported pictures.

2007-10-25  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
	* src/eventlistitem.h:
	* src/main.cpp:
		Add bookmark conversion and the -cut option
		(patches by Ralph Glasstetter).

2007-10-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Display a message when setting markers failed.

	* src/mpgfile.h:
	* src/tsfile.cpp:
	* src/tsfile.h:
		Let getbookmarks() return a std::vector
		(patches by Ralph Glasstetter).

2007-10-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
	* src/index.h: